Fixed right side gap issue

--- a/src/app/header/navbar.component.css
+++ b/src/app/header/navbar.component.css
@@ -49,6 +49,7 @@ button:focus {
 
 mat-toolbar {
   transition: height 0.25s ease-out;
+  transition: line-height 0.25s ease-out;
   font-weight: 700;
   font-size: 20px;
   text-transform: uppercase;
